fix: scrollbar

--- a/src/components/Layout/layout.module.css
+++ b/src/components/Layout/layout.module.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  scrollbar-gutter: stable both-edges;
 }
 
 .main_notHome {
