--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,9 +14,9 @@ body {
   color: var(--main-text-color);
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   display: none;
-}
+} */
 
 body {
   background: url('/images/mobile_bg.jpg') fixed no-repeat var(--body-background-color);
